; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_stopped_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_stopped_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"%s:%s: timer_stopped_handler\00", align 1
@TIMER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"%s:%s: deleted timer event source\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @timer_stopped_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_stopped_handler(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @TAG, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @get_id_string(i32 %11, i32 %12)
  %14 = call i32 @ESP_LOGI(i32 %9, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13)
  %15 = load i32, i32* @TIMER, align 4
  %16 = call i32 @esp_timer_delete(i32 %15)
  %17 = load i32, i32* @TAG, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @get_id_string(i32 %19, i32 %20)
  %22 = call i32 @ESP_LOGI(i32 %17, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %18, i32 %21)
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, i32, i32) #1

declare dso_local i32 @get_id_string(i32, i32) #1

declare dso_local i32 @esp_timer_delete(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
